# selena

./: README.md
compiler/: .cproject  .project  meson.build
compiler/include/: selena-compiler.h
compiler/src/: selena-lexer.c
examples/hello_world/: hello_world.se
examples/hello_world/include/: hello.h
examples/hello_world/src/: helloc.c  main.c
runtime/: .cproject  .project  meson.build  win-clang.ini
runtime/examples/: hello.c
runtime/include/: selena.h
runtime/src/: selena-runtime.c
